# SURP2024

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  dynamic_programming.cpp  dynamic_programming.h  glauber_dynamics.cpp  glauber_dynamics.h  graph.cpp  graph.h  hello_world.cpp  random_trees.cpp  random_trees.h  test.cpp
tests/1000nodes/lambda0.001/T1000K1000/: test1.out  test2.out  test3.out
tests/1000nodes/lambda0.001/T1000K10000/: test1.out  test2.out  test3.out
tests/1000nodes/lambda0.001/T1000K100000/: test1.out  test2.out  test3.out
tests/1000nodes/lambda0.001/T1000K200/: test1.out  test2.out  test3.out
tests/1000nodes/lambda1/T10,000K200/: test1.out  test2.out  test3.out
tests/1000nodes/lambda1/T100,000K200/: test1.out  test1T100,000K200.out  test2.out  test2T100,000K200.out  test3.out  test3T100,000K200.out
tests/1000nodes/lambda1/T1000K200/: test1.out  test2.out  test3.out
tests/1000nodes/lambda1/T1000K500/: test1.out  test2.out  test3.out
tests/500nodes/T100,000K200/: test1T100,000K200.out  test2T100,000K200.out  test3T100,000K200.out
